--- a/dotnet_portfolio/Views/Home/Projects.cshtml
+++ b/dotnet_portfolio/Views/Home/Projects.cshtml
@@ -6,16 +6,22 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Portfolio Home</title>
+        <title>Portfolio Contact</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div>
+            @Html.Partial("Navigation");
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Starting Portfolio Using Boilerplate html</h1>
+        <h1>Projects!</h1>
         <script src="" async defer></script>
+        <div>
+            @Html.Partial("FooterScript");
+        </div>
     </body>
 </html>
