Adding project razor interaction

--- a/dotnet_portfolio/Views/Shared/Navigation.cshtml
+++ b/dotnet_portfolio/Views/Shared/Navigation.cshtml
@@ -15,7 +15,7 @@
           Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="~/">Dot Net Core</a>
+          <a class="dropdown-item" href="~/projects">Dot Net Core</a>
           <a class="dropdown-item disabled" href="#">Dot Net MVC Framework</a>
           <a class="dropdown-item disabled" href="#">Argis Mapping</a>
           <a class="dropdown-item disabled" href="#">Angular - MVC .NET</a>
