--- a/dotnet_portfolio/Views/Shared/Navigation.cshtml
+++ b/dotnet_portfolio/Views/Shared/Navigation.cshtml
@@ -24,7 +24,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="~/contact" tabindex="-1" aria-disabled="true">Contact</a>
+        <a class="nav-link" href="~/contact" tabindex="-1" aria-disabled="true">Contact - Dojo Survey</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
